revision 2 (Frontend) Full app Mobile responsiveness Filter checkbox fixes Align footer links and make them clickable

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -13,7 +13,8 @@
     width: 40px;
     height: 40px;
     margin-top: -18px;
-    border-radius: 30%;
+
+  border-radius: 4px;
 }
 .ant-slider-dot:first-child{
     display: none;
